[gd_scene load_steps=2 format=3 uid="uid://by7db3dsmo5gx"]

[ext_resource type="Script" path="res://scripts/screens/level_select.gd" id="1_txy0a"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_txy0a")

[node name="Scene 1" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 57.0
offset_right = 637.0
offset_bottom = 124.0
text = "Level 1"

[node name="Scene 2" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 138.0
offset_right = 637.0
offset_bottom = 205.0
text = "Level 2"

[node name="Scene 3" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 217.0
offset_right = 637.0
offset_bottom = 284.0
text = "Level 3"

[node name="Scene 4" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 297.0
offset_right = 637.0
offset_bottom = 364.0
text = "Level 4"

[node name="Scene 5" type="Button" parent="."]
offset_left = 465.0
offset_top = 373.0
offset_right = 637.0
offset_bottom = 440.0
text = "Level 5"

[node name="Testing" type="Button" parent="."]
layout_mode = 0
offset_left = 465.0
offset_top = 533.0
offset_right = 637.0
offset_bottom = 600.0
text = "Testing"

[connection signal="pressed" from="Scene 1" to="." method="_on_scene_1_pressed"]
[connection signal="pressed" from="Scene 2" to="." method="_on_scene_2_pressed"]
[connection signal="pressed" from="Scene 3" to="." method="_on_scene_3_pressed"]
[connection signal="pressed" from="Scene 4" to="." method="_on_scene_4_pressed"]
[connection signal="pressed" from="Scene 5" to="." method="_on_scene_5_pressed"]
[connection signal="pressed" from="Testing" to="." method="_on_testing_pressed"]
