extends Node



func _on_scene_1_pressed():
	get_tree().change_scene_to_file("res://Scene 1 MS .tscn")


func _on_scene_2_pressed():
	get_tree().change_scene_to_file("res://sence.tscn")


func _on_scene_3_pressed():	
	get_tree().change_scene_to_file("res://Forest ek.tscn")


func _on_scene_4_pressed():
	get_tree().change_scene_to_file("res://level.tscn")


func _on_testing_pressed():
	get_tree().change_scene_to_file("res://TestingSceneAP.tscn")
